Java version migrations and code formatting. Use a publicly built BCrypt. Upgrade graalvm version to support JDK 22.